:rotating_light: Fixed suppressed warnings